# money-morph-bot

./: .env.example  .gitignore  README.md  pyproject.toml
src/money_morph_bot/: bot.py  config.py  constants.py  converter.py
src/money_morph_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_converter.py
