[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"


[project]
name = "money-morph-bot"
version = "0.1.0"
description = "A Telegram bot for converting fiat currencies."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyTelegramBotAPI>=4.26,<5",
    "python-dotenv>=1.0,<2",
    "requests>=2.32,<3",
]


[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.12,<1",
]


[project.scripts]
money-morph-bot = "money_morph_bot.bot:main"


[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]


[tool.ruff]
target-version = "py311"
line-length = 88


[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]